--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
     "strictInjectionParameters": true,
     "strictPropertyInitialization": false,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
   }
 }
