--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.2.5",
     "bootstrap": "^4.6.0",
     "firebase": "^8.3.2",
+    "ng2-ckeditor": "^1.3.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
